[tool.poetry]
name = "wipt-api"
version = "0.1.0"
description = "Image processing tool"
authors = ["Wallace Silva <contato@wallacesilva.com>"]
license = "MIT LICENSE"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
rembg = "^2.0.30"
fastapi = "0.87.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-multipart = "^0.0.5"
opencv-python = "^4.7.0"
numpy = "1.23.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
